[gd_scene load_steps=3 format=3 uid="uid://dfas4l8bwq4dy"]

[ext_resource type="Script" uid="uid://iuklwoaq5ynf" path="res://Scripts/end_panel.gd" id="1"]
[ext_resource type="FontFile" uid="uid://gk2r702ierey" path="res://Fonts/Bagura Font Pack v1.5/Bagura Font Pack v1.5/Basal.ttf" id="2_ecrqj"]

[node name="EndPanel" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ecrqj")
theme_override_font_sizes/font_size = 72
text = "Results"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ecrqj")
theme_override_font_sizes/font_size = 36
text = "Final Score: 0"
horizontal_alignment = 1

[node name="Feedback" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ecrqj")
theme_override_font_sizes/font_size = 36
text = "Feedback: (coming soon)"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Restart" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_ecrqj")
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="NextLevel" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_ecrqj")
theme_override_font_sizes/font_size = 40
text = "Next Level"

[node name="MainMenu" type="Button" parent="Panel/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_ecrqj")
theme_override_font_sizes/font_size = 40
text = "Main Menu"
